# ascendevtool

./: .gitignore  =1.1.0  README.md  context.md  env.md  environment.txt  migrate.py
AscendDevTool/AscendDevTool/op_builder/: AddCustom.json  CMakeLists.txt  create_op.py
AscendDevTool/AscendDevTool/op_builder/ops_src/BallQuerySample/: README.en.md
AscendDevTool/AscendDevTool/op_builder/ops_src/BallQuerySample/FrameworkLaunch/: README.en.md
AscendDevTool/AscendDevTool/op_builder/ops_src/BallQuerySample/FrameworkLaunch/AclNNInvocation/: README.en.md  README.md
AscendDevTool/AscendDevTool/op_builder/ops_src/EmbodiedAiOpsSample/FrameworkLaunch/EmbodiedAiOps/: CMakePresets.json
AscendDevTool/AscendDevTool/op_builder/ops_src/FastGeluSample/: README.en.md
AscendDevTool/AscendDevTool/op_builder/ops_src/MaxPool2dSample/FrameworkLaunch/: MaxPool2d.json
AscendDevTool/AscendDevTool/op_builder/ops_src/ThreeNNSample/: README.en.md  README.md
AscendDevTool/AscendDevTool/op_builder/ops_src/ThreeNNSample/FrameworkLaunch/: README.md  ThreeNN.json
AscendDevTool/AscendDevTool/op_builder/ops_src/ThreeNNSample/FrameworkLaunch/AclNNInvocation/: README.md
AscendDevTool/AscendDevTool/op_builder/skill_docs/: 03_memory_sync.md  04_datacopy.md  05_cache_system.md  06_atomic_matrix.md  06_host_api.md  11_highlevel_matmul.md  12_highlevel_activation.md  13_highlevel_norm.md  17_highlevel_hccl.md  README.md  SKILL.md
AscendDevTool/AscendDevTool/op_builder/src/: op_registry.cpp
AscendDevTool/AscendDevTool/op_builder/src/ops/fast_gelu/: kernel_impl.cpp
gui/: app_main.py  (+4 more)
(+255 files in other folders)
